# cc_workflow_template

./: .gitignore  CMakeLists.txt  README.md
api/template/v1/: template.pb.go  template.proto
app/template/cmd/template/: arg.h  environment.h  main.cc
app/template/configs/: bootstrap.yaml  device.yaml  folder.yaml  logger.yaml  registry.yaml
app/template/internal/biz/: biz.h  template.h
app/template/internal/boot/: bootstrap.h  config.h  device.h  folder.h  logger.h  registry.h
app/template/internal/conf/: conf.h  config.h  device.h  folder.h  logger.h  registry.h
app/template/internal/data/: data.h  template.h
app/template/internal/server/: README.md  http.h  server.h
app/template/internal/service/: README.md  service.cc  service.h  template.cc  template.h
pkg/: pkg.h  response.h  singleton.h
pkg/cxxopts/: cxxopts.h
pkg/json/: json.hpp  json_fwd.hpp
pkg/middleware/: header_handle.h
pkg/otel/: README.md  grpc.h  http.h  otel.h
pkg/register/: consul.h  node.h
pkg/utils/: base64.cc  base64.h  file.h  tinyxml2.cc  tinyxml2.h  uuid.h
pkg/wfredis/: conf.h  del.h  expire.h  get.h  hdel.h  hget.h  hset.h  set.h  wfredis.h
